add app information

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head> 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0"/>
-  <meta name="Description" content="파일암호화,변신,합체,mp4,동영상,만화,사진">
-  <title>media keeper bayo</title>
+  <meta name="Description" content="encrypt,merge,transform,파일암호화,변신,합체,mp4,동영상,만화,사진">
+  <title>Media Keeper Bayo</title>
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -123,7 +123,7 @@
               <!-- bayo만들기 옵션선택 -->
               <div class="card option-select row hide"  >
                   <div class="option-combine hide">
-                      <div class="option-title">합체 완료 ( Combine )</div>
+                      <div class="option-title">합체 완료 ( Merge )</div>
                       <div class="divider"></div>
                     <div><label><input type="checkbox" disabled checked class="" /><span> Automatically selected ( 자동 선택됨 )</span></label></div>
                       <div class="description">
@@ -220,7 +220,45 @@
     <div id="topButton" onclick="topFunction()" class="btn-floating float-button hide">
       <i class="material-icons red circle">arrow_upward</i>
     </div>  
-      
+      <div class="container intro-en">
+        <div class="row">
+            <div class="col s12">
+                <h5>Keep Sensitive Files Safe</h5>
+            </div>
+              <div class="col s12 l6">
+            <h5>Encrypt</h5>
+            <p>100% privacy!  No account,  No installation. Very Fast. Up to 2GB file size.  
+          Support AES cryptography algorithm.</p>
+          </div>
+          <div class="col s12 l6">
+              <h5>Transform</h5>
+              <p>It’s a file transformer. You can convert any type of files into a jpeg image file. 
+                  You can choose the image want to be.</p>  
+          </div>
+          <div class="col s12 l6">
+            <h5>Unicode Passphrase</h5>
+            <p>You can use world wide utf-8 encoded unicode characters. 
+                 </p>
+          </div> 
+          <div class="col s12 l6">
+              <h5>Browser Pocket & Instant Viewer</h5>
+              <p>Store media files into browser storage.
+                  Watch your mp4, images, text files without other application. </p>
+            </div>    
+          <div class="col s12 l6">
+              <h5>PWA</h5>
+              <p>It’s a progressive web app. 
+                Add to home screen.  It works offline.
+                Support modern mobile/desktop browsers. ( chrome, firefox, safari, chromium edge, samsung )</p>
+            </div>    
+          <div class="col s12 l6">
+              <h5>Open Source</h5>
+              <p>It’s open source web app. 
+                  URL:  https://github.com/mediakeeper/mediakeeper.github.io
+                  </p>
+            </div>       
+        </div>
+      </div>
 </main>
 <footer class="page-footer light grey lighten-1">
     <div class="container" style="margin-bottom: 15px;">
