--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <input class="file-path" type="text" placeholder='Select one or more files'>
               </div>
           </div>
-          <div class="banner-view hide"><a href="https://mediakeeper.github.io"><img class="responsive-img" src="banners/defaultBayoBanner.jpg"></a></div>
+          <div class="banner-view hide"><a href="https://mediakeeper.github.io"><img class="responsive-img" src="banners/Bayo-mediaKeeper-banner1.png"></a></div>
           <div class="user-choice">
             <!-- 선택파일 정보 -->
             <!-- <div class="label">선택된 파일</div> -->
@@ -222,6 +222,9 @@
     </div>  
       <div class="container intro-en">
         <div class="row">
+          <div class="col s12">
+            <img class="responsive-img" src="images/Bayo-mediaKeeper-card.png">
+          </div>
             <div class="col s12">
                 <h5>Keep Sensitive Files Safe</h5>
             </div>
