fix-svg  app_url

--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
                     <div class="row jpgmask-container hide"  >
                         <div class="col s12 m4">
                           <div class="jpg-selected"></div>
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                          <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"/></svg>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M3 13.5L5 11.5L9 15.5L19.5 5L21.5 7L9 19.5L3 13.5Z" fill="white" fill-opacity="0.5"/>
+                            <path d="M9.00016 16.1698L4.83016 11.9998L3.41016 13.4098L9.00016 18.9998L21.0002 6.99984L19.5902 5.58984L9.00016 16.1698Z" fill="#FF0000"/>
+                            </svg>
                         </div>
                         <div class="jpg-list col s12 m8"></div>
                         <div class="jpg-local col s12">
